# 完善设计模式之策略模式